# attest-dev

./: .gitignore  Dockerfile  README.md  docker-compose.yml  glama.json  railway.toml
dashboard-app/: .env.example  README.md  index.html  package-lock.json  package.json
dashboard-app/src/: App.jsx  styles.css
demo/: index.html
docs/: CNAME  dashboard.html  demo.html  docs.html  index.html  llms-full.txt  llms.txt  mcp.html  package-lock.json  package.json  robots.txt  sitemap.xml  styles.css  verify.html
docs/demo/: index.html
docs/docs/: index.html
docs/mcp/: index.html
docs/tests/: dashboard-verifier.smoke.mjs  demo-page.smoke.mjs  landing-page.smoke.mjs  mcp-page.smoke.mjs  verify-page.smoke.mjs  waitlist-page.smoke.mjs
docs/verify/: index.html
docs/waitlist/: index.html
examples/: README.md
scripts/: hitl_demo.py  smoke_test.py
sdks/python/: README.md  pyproject.toml
sdks/python/attest/: __init__.py  checksum.py  client.py  scope.py  types.py  verifier.py
sdks/python/attest/integrations/: __init__.py  anthropic_sdk.py  langgraph.py  openai_agents.py
sdks/python/tests/: test_anthropic_sdk.py  test_client_approvals.py  test_evidence_verifier.py  test_langgraph.py  test_openai_agents.py
sdks/python/warrant/: __init__.py  client.py  scope.py  types.py
sdks/python/warrant/integrations/: __init__.py  langgraph.py  openai_agents.py
server/: Dockerfile  fly.toml  go.mod  go.sum  schema.sql
spec/: WCS-01.md  draft-yakung-oauth-agent-attestation-00.html  draft-yakung-oauth-agent-attestation-00.md  draft-yakung-oauth-agent-attestation-00.txt  draft-yakung-oauth-agent-attestation-00.xml
(+87 files in other folders)
