[project]
name = "attest-sdk"
version = "0.1.0b5"
description = "Python SDK for the Attest cryptographic agent credential service"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.11"
keywords = ["attest", "jwt", "agent", "credentials", "delegation", "ai-safety"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Security :: Cryptography",
    "Topic :: Software Development :: Libraries",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "httpx>=0.27",
    "pyjwt[crypto]>=2.8",
]

[project.optional-dependencies]
langgraph = ["langgraph>=0.2", "langchain-core>=0.3"]
anthropic = ["anthropic>=0.25"]
dev = ["pytest", "pytest-asyncio", "respx"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["attest"]
